testsuite/tests/grammar/invalid_lexers/pattern_2.lkt
from common import Example

lexer foo_lexer {
    Example <- p"{no_such_pattern}"
}

@with_lexer(foo_lexer)
grammar foo_grammar {
    @main_rule main_rule <- Example("example")
}
